fixed issue with graph not showing

--- a/assets/styles/views/Dashboard.css
+++ b/assets/styles/views/Dashboard.css
@@ -1,6 +1,6 @@
 /* Dashboard */
 
-.dash-container {
+.container {
   composes: dis-f jc-sb from "../helpers.css";
   margin-top: 3rem;
 }
@@ -28,4 +28,12 @@
 .spending-form__inputs {
   margin-left: 1rem;
   margin-right: 1rem;  
+}
+
+.category-section {
+  composes: w-50 from "../helpers.css";
+}
+
+.category-section canvas {
+  margin: auto;
 }
